[gd_scene load_steps=4 format=3 uid="uid://bfbvoidrbx8hu"]

[ext_resource type="Script" uid="uid://c3wksca72mpj2" path="res://UI/settings_popup/settings_panel.gd" id="1_1d534"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qy6a"]
bg_color = Color(0.25929368, 0.25929374, 0.2592936, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5ekf"]
bg_color = Color(0.14406255, 0.14406255, 0.14406249, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[node name="SettingsPanel" type="CanvasLayer"]
layer = 6
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1163.0
offset_bottom = 661.0
color = Color(1, 1, 1, 0)

[node name="SettingsPanel" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(1000, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1d534")

[node name="Panel" type="Panel" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0qy6a")

[node name="Panel2" type="Panel" parent="SettingsPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 998.0
offset_bottom = 67.0
theme_override_styles/panel = SubResource("StyleBoxFlat_g5ekf")

[node name="Control" type="Control" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="SettingsPanel/Control"]
layout_mode = 0
offset_right = 262.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 28
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsPanel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.135
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/Control/ScrollContainer"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolume" type="HSlider" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="HSlider" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="HBoxContainer4" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolume" type="HSlider" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fullscreen" type="CheckBox" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer5" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Option 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HBoxContainer6" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Option 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HBoxContainer7" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Option 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HBoxContainer8" type="HBoxContainer" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Option 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="CloseSettingsButton" type="Button" parent="SettingsPanel/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_top = 12.0
offset_right = -13.0
offset_bottom = 56.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 26
text = "Save & Exit"

[connection signal="value_changed" from="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer2/MasterVolume" to="SettingsPanel" method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer3/MusicVolume" to="SettingsPanel" method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer4/SFXVolume" to="SettingsPanel" method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="SettingsPanel/Control/ScrollContainer/VBoxContainer/HBoxContainer/Fullscreen" to="SettingsPanel" method="_on_fullscreen_toggled"]
[connection signal="pressed" from="SettingsPanel/Control/CloseSettingsButton" to="." method="hide"]
[connection signal="pressed" from="SettingsPanel/Control/CloseSettingsButton" to="SettingsPanel" method="_on_close_settings_button_pressed"]
